--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/faker": "^4.1.12",
     "@types/jest": "^25.2.3",
     "@types/yargs": "^15.0.5",
-    "expect-even-more-jest": "0.0.4",
+    "expect-even-more-jest": "^1.0.0",
     "expect-more-jest": "^5.1.0",
     "faker": "^4.1.0",
     "filesystem-sandbox": "^1.8.0",
