--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "git-infect",
+  "name": "git-broadcast",
   "version": "0.0.1",
   "description": "Utility to merge outwards from one branch to all others, where cleanly possible",
-  "main": "dist/src/index.js",
-  "files": [],
+  "main": "dist/infect.js",
+  "files": [
+    "dist/**/*"
+  ],
+  "bin": {
+    "git-infect": "./dist/git-infect-cli.js"
+  },
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/git-broadcast-cli.ts",
     "pretest": "run-s clear-sandboxes",
     "test": "jest",
     "clear-sandboxes": "node -e \"require('filesystem-sandbox').Sandbox.destroyAny();\"",
@@ -31,12 +36,12 @@
     "expect-even-more-jest": "^1.0.0",
     "expect-more-jest": "^5.1.0",
     "faker": "^4.1.0",
-    "filesystem-sandbox": "^1.8.0",
+    "filesystem-sandbox": "^1.11.0",
     "glob": "^7.1.6",
     "jest": "^26.0.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.0.0",
-    "ts-node": "^8.10.1",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.3",
     "zarro": "^1.49.0"
   },
