--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "scripts": {
     "start": "ts-node src/git-broadcast-cli.ts",
-    "pretest": "run-s clear-sandboxes",
+    "pretest": "run-p clear-sandboxes clear-cache check-platform",
+    "clear-cache": "rimraf .jest-cache",
     "test": "jest",
-    "clear-sandboxes": "node -e \"require('filesystem-sandbox').Sandbox.destroyAny();\"",
+    "posttest": "run-s clear-sandboxes",
+    "clear-sandboxes": "rimraf __sandboxes__",
+    "check-platform": "node check-platform.js",
     "prebuild": "rimraf dist",
     "build": "run-p lint tsc",
     "tsc": "tsc",
@@ -42,6 +45,7 @@
     "@types/chalk": "^2.2.0",
     "@types/faker": "^4.1.12",
     "@types/jest": "^25.2.3",
+    "@types/which": "^1.3.2",
     "@types/yargs": "^15.0.5",
     "expect-even-more-jest": "^1.0.0",
     "expect-more-jest": "^5.1.0",
@@ -55,6 +59,7 @@
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.9.3",
+    "which": "^2.0.2",
     "zarro": "^1.49.0"
   },
   "dependencies": {
