--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   },
   "scripts": {
     "start": "ts-node src/git-broadcast-cli.ts",
-    "pretest": "run-p clear-sandboxes clear-cache check-platform",
+    "pretest": "run-p clear-cache check-platform",
     "clear-cache": "rimraf .jest-cache",
     "test": "jest",
-    "posttest": "run-s clear-sandboxes",
-    "clear-sandboxes": "rimraf __sandboxes__",
     "check-platform": "node check-platform.js",
     "prebuild": "rimraf dist",
     "build": "run-p lint tsc",
@@ -50,7 +48,7 @@
     "expect-even-more-jest": "^1.5.0",
     "expect-more-jest": "^5.1.0",
     "faker": "^4.1.0",
-    "filesystem-sandbox": "^1.11.0",
+    "filesystem-sandbox": "^1.12.0",
     "glob": "^7.1.6",
     "jest": "^26.0.1",
     "npm-run-all": "^4.1.5",
