--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "git-broadcast",
-  "version": "0.12.0",
+  "version": "0.13.0",
   "description": "Utility to merge outwards from one branch to all others, where cleanly possible",
   "main": "dist/git-broadcast.js",
   "files": [
@@ -26,6 +26,8 @@
     "release-beta": "cross-env BETA=1 VERSION_INCREMENT_STRATEGY=patch run-s \"zarro release-npm\"",
     "prerelease": "run-s build test",
     "release": "cross-env VERSION_INCREMENT_STRATEGY=minor run-s \"zarro release-npm\"",
+    "prequick-release": "run-s build",
+    "quick-release": "cross-env VERSION_INCREMENT_STRATEGY=minor run-s \"zarro release-npm\"",
     "zarro": "zarro"
   },
   "repository": {
