--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "homepage": "https://github.com/fluffynuts/git-infect#readme",
   "devDependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/debug": "^4.1.5",
     "@types/faker": "^4.1.12",
     "@types/jest": "^25.2.3",
     "@types/which": "^1.3.2",
@@ -64,6 +65,7 @@
   },
   "dependencies": {
     "chalk": "^4.0.0",
+    "debug": "^4.3.1",
     "simple-git": "^2.5.0",
     "yafs": "^1.7.0",
     "yargs": "^15.3.1"
