:construction: creating summary output for piped process to consume

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clear-cache": "rimraf .jest-cache",
     "test": "jest",
     "check-platform": "node check-platform.js",
-    "prebuild": "rimraf dist",
+    "clean-dist": "rimraf dist",
+    "generate-index": "node generate-index.js",
+    "prebuild": "run-p clean-dist generate-index",
     "build": "run-p lint tsc",
     "tsc": "tsc",
     "lint": "tslint -p .",
