:bug: should ensure fully fetched before trying to check out (possibly) different branch

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "ts-node src/git-broadcast-cli.ts",
     "pretest": "run-p clear-cache check-platform",
     "clear-cache": "rimraf .jest-cache",
-    "test": "jest",
+    "test-raw": "jest",
+    "test": "cross-env MAX_CONCURRENCY=1 FAIL_FAST=1 jest",
     "check-platform": "node check-platform.js",
     "clean-dist": "rimraf dist",
     "generate-index": "node generate-index.js",
